# liteeffects

./: EXAMPLE.md  README.md  dune-project  liteeffects.opam
.github/workflows/: build-test.yml
lib/: ast.ml  ast_utils.ml  cli.ml  dune  interpret.ml  lexer.mll  parser.mly  tEnv.ml  typecheck.ml  typecheck_utils.ml
test/: dune  test.ml  test_interpreter.ml  test_liteeffects.ml  test_parser.ml  test_typechecker.ml  test_utils.ml
